--- a/search/Dockerfile
+++ b/search/Dockerfile
@@ -2,7 +2,10 @@ FROM python
 
 RUN pip3 install pirate-get \
 && mkdir /root/torrents \
+&& mkdir /root/.config \
 && echo "alias pg='pirate-get'" >> /root/.bashrc
+
+COPY pirate-get /root/.config
 
 WORKDIR /root/torrents
 
